--- a/task_frontend/taskmanage/package.json
+++ b/task_frontend/taskmanage/package.json
@@ -9,8 +9,11 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-jqueryui-datepicker": "^1.0.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
